# IEEE-VR-2026-MultiCam

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  cosypose.hpp  demo.cpp  evaluate_scenertm6d_dataset_multiview.cpp  evaluate_scenertm6d_evaluator_multiview.cpp  evaluate_scenertm6d_evaluator_multiview.h  evaluate_tless_dataset_multiview.cpp  evaluate_tless_evaluator_multiview.cpp  evaluate_tless_evaluator_multiview.h  evaluate_ycb_dataset_multiview.cpp  evaluate_ycb_evaluator_multiview.cpp  evaluate_ycb_evaluator_multiview.h  test_hololens.cpp
include/m3t/: MultiDeviceCapturer.h  azure_kinect_multi.h  azure_kinect_multi2.h  camera.h  hl2ss_mt.h  hololens_camera.h  modality.h
src/: CMakeLists.txt  azure_kinect_multi.cpp  camera.cpp  depth_modality.cpp  hl2ss.cpp  hl2ss_lnm.cpp  hl2ss_mt.cpp  hololens_camera.cpp  modality.cpp  optimizer.cpp  realsense_camera.cpp  region_modality.cpp  texture_modality.cpp  tracker.cpp
